--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "split-type": "^0.3.4"
   },
   "devDependencies": {
